--- a/test/test.css
+++ b/test/test.css
@@ -3,5 +3,7 @@ body{
   width: 200PX;
   border: 10px;
   font-size: 12.34px;
-  border: 10rpx;
+  border: 10px solid #f00;
+  border-left:12.33px solid #f00;
+  border:1PX solid #f00;
 }
